nullaway_error_A7DB7867-2B96-47C8-A08C-5128DBBD1DAF.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-messaging/src/main/java/org/springframework/messaging/simp/stomp/StompHeaders.java:288: error: [NullAway] dereferenced expression rawValue is @Nullable
				Long.parseLong(rawValue, pos + 1, rawValue.length(), 10)};
				                                          ^
    (see http://t.uber.com/nullaway )
